--- a/AppExample1/app/src/main/AndroidManifest.xml
+++ b/AppExample1/app/src/main/AndroidManifest.xml
@@ -13,15 +13,20 @@
         android:theme="@style/Theme.AppExample1"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.CalculadoraActivity"
             android:exported="true"
-            android:label="@string/app_name"
+            android:label="@string/title_activity_calculadora"
             android:theme="@style/Theme.AppExample1">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".ui.MainActivity"
+            android:exported="true"
+            android:theme="@style/Theme.AppExample1">
         </activity>
     </application>
 
